# dbot_ros

./: .clang-format  CMakeLists.txt  README.md  package.xml
cmake/: version.cmake
config/: camera.yaml  config.yaml  gaussian_tracker.yaml  object.yaml  object_config.yaml  object_tracker_service.yaml  object_tracker_services.yaml  particle_tracker.yaml  rbc_particle_filter_tracker.yaml  rms_gaussian_filter_object_tracker.yaml
doxygen/: Doxyfile.in
include/dbot_ros/: object_tracker_publisher.h  object_tracker_publisher.hpp  tracker_node.h  tracker_node.hpp  tracker_publisher.h
include/dbot_ros/trackers/: tracker.hpp
include/dbot_ros/utils/: cloud_visualizer.hpp  data_set_camera_data_provider.hpp  pcl_interface.hpp  ros_camera_data_provider.hpp  ros_interface.hpp  tracking_dataset.h  tracking_dataset.hpp
include/dbot_ros_pkg/trackers/: object_tracker.hpp  rbc_particle_filter_object_tracker.hpp  rbc_particle_filter_object_tracker.hpp.backup  tracker.hpp
include/dbot_ros_pkg/trackers/gaussian/: filter_builder_multi_sensor.hpp  filter_builder_robust_multi_sensor.hpp
include/dbot_ros_pkg/utils/: helper_functions.hpp  interactive_marker_wrapper.hpp  object_file_reader.hpp  pcl_interface.hpp  ros_camera_data_provider.hpp  ros_interface.hpp  tracking_dataset.h
launch/: gaussian_tracker.launch  interactive_markers_initializer.launch  object_tracker.launch  object_tracker_controller_service.launch  object_tracker_service.launch  object_tracker_services.launch  particle_tracker.launch  rbc_particle_filter_object_tracker.launch  rms_gaussian_filter_object_tracker.launch  tracker.launch  tracker_interactive.launch  xtion.launch
msg/: ObjectState.msg
scripts/: object_tracker_controller_service_call.py  track_object_service_call_example.py
source/dbot_ros/: interactive_markers_initializer_node_main.cpp  object_tracker_controller_service_node.cpp  object_tracker_publisher.cpp  object_tracker_publisher.h  object_tracker_ros.cpp  object_tracker_ros.h  object_tracker_ros.hpp
source/dbot_ros/tracker/: gaussian_tracker_node.cpp  object_tracker_service_node.cpp  particle_tracker_node.cpp  rbc_particle_filter_object_tracker_node.cpp  rbc_particle_filter_object_tracker_node.cpp.orig  rms_gaussian_filter_object_tracker_node.cpp
source/dbot_ros/tracker/gaussian/: rmsgf_object_dual_lockstep_tracker_simulation_node.cpp  rmsgf_object_tracker_node.cpp  rmsgf_object_tracker_simulation_node.cpp
source/dbot_ros/util/: data_set_camera_data_provider.cpp  data_set_camera_data_provider.h  data_set_camera_data_provider.hpp  interactive_marker_initializer.cpp  interactive_marker_initializer.h  interactive_marker_initializer.hpp  ros_camera_data_provider.cpp  ros_camera_data_provider.h  ros_camera_data_provider.hpp  ros_interface.cpp  ros_interface.h  ros_interface.hpp  tracking_dataset.cpp  tracking_dataset.h
src/dbot_ros/: object_tracker_controller_service_node.cpp  object_tracker_node.cpp  object_tracker_publisher.cpp  object_tracker_publisher.h  object_tracker_ros.h  object_tracker_ros.hpp  tracker_node.hpp  tracker_publisher.h
src/dbot_ros/tracker/: object_tracker_service_node.cpp  rbc_particle_filter_object_tracker_node.cpp  rms_gaussian_filter_object_tracker_node.cpp
src/dbot_ros/tracker/gaussian/: rmsgf_object_tracker_node.cpp
src/dbot_ros/trackers/: object_tracker_service_node.cpp  rbc_particle_filter_object_tracker.cpp.backup  rbc_particle_filter_object_tracker_node.cpp  rms_gaussian_filter_object_tracker_node.cpp  tracker.cpp  tracker_node.cpp
src/dbot_ros/trackers/gaussian/: rmsgf_object_tracker_node.cpp
src/dbot_ros/util/: data_set_camera_data_provider.cpp  data_set_camera_data_provider.hpp  tracking_dataset.cpp  tracking_dataset.h
src/dbot_ros/utils/: cloud_visualizer.cpp  data_set_camera_data_provider.cpp  pcl_interface.cpp  ros_camera_data_provider.cpp  ros_interface.cpp  tracking_dataset.cpp
src/dbot_ros_pkg/trackers/: object_tracker.cpp  object_tracker_node.cpp  rbc_particle_filter_object_tracker.cpp  rbc_particle_filter_object_tracker_node.cpp  tracker.cpp  tracker_interactive_node.cpp  tracker_node.cpp
src/dbot_ros_pkg/trackers/gaussian/: rmsgf_object_dual_lockstep_tracker_simulation_node.cpp  rmsgf_object_tracker_node.cpp  rmsgf_object_tracker_simulation_node.cpp
src/dbot_ros_pkg/utils/: cloud_visualizer.cpp  interactive_marker_wrapper.cpp  object_file_reader.cpp  pcl_interface.cpp  ros_camera_data_provider.cpp  ros_interface.cpp  tracking_dataset.cpp
src/pose_tracking_interface/trackers/: object_tracker_node.cpp
