<?xml version="1.0"?>
<package format="2">
  <name>dbot_ros</name>
  <version>0.1.0</version>
  <description>The dbot_ros package</description>

  <maintainer email="jan.issac@gmail.com">Jan Issac</maintainer>

  <license>GNU GPL</license>

  <url type="website">https://github.com/bayesian-object-tracking/dbot_ros</url>

  <author email="jan.issac@gmail.com">Jan Issac</author>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>fl</depend>
  <depend>dbot</depend>
  <depend>dbot_ros_msgs</depend>
  <depend>interactive_markers</depend>

  <export>
    <!-- <metapackage/> -->
  </export>
</package>
